Name:                yesod-recaptcha
Version:             1.4
Synopsis:            Dead simple support for reCAPTCHA on Yesod applications.
Homepage:            https://github.com/prowdsponsor/yesod-recaptcha
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
-- Copyright:
-- Extra-source-files:

Description:
  This package provides support for reCAPTCHA
  (<http://www.google.com/recaptcha>) on Yesod applications.

Source-repository head
  type:     git
  location: git://github.com/prowdsponsor/yesod-recaptcha.git

Library
  Hs-source-dirs: src
  GHC-options: -Wall
  Exposed-modules: Yesod.ReCAPTCHA
                 , Yesod.ReCAPTCHA.Class
                 , Yesod.ReCAPTCHA.Message
                 , Yesod.ReCAPTCHA.ReCAPTCHA1
                 , Yesod.ReCAPTCHA.ReCAPTCHA2
  Extensions: DeriveDataTypeable FlexibleContexts TemplateHaskell
              QuasiQuotes OverloadedStrings
  Build-depends:
      base
    , aeson
    , blaze-markup
    , bytestring
    , text
    , data-default
    , lifted-base
    , yesod-core
    , yesod-form
    , wai
    , network
    , network-info
    , http-conduit
    , http-types
    , resourcet
    , mtl
